--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -283,11 +283,6 @@
             margin: 0;
         }
 
-        #checkboxes {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-        }
 
         @media (max-width: 768px) {
             body {
@@ -594,13 +589,11 @@
                     </tr>
                     <tr>
                         <td style="text-align: left; border: none;">Убрать данные матча на скриншоте</td>
-                        <td style="text-align: center; border: none;"><input type="checkbox" id="hideInfoCheckbox"
-                                style="margin-left: 10px;"></td>
+                        <td style="text-align: center; border: none;"><input type="checkbox" id="hideInfoCheckbox"></td>
                     </tr>
                     <tr>
                         <td style="text-align: left; border: none;">Убрать анимацию шашек</td>
-                        <td style="text-align: center; border: none;"><input type="checkbox" id="skipAnimationCheckbox"
-                                style="margin-left: 10px;">
+                        <td style="text-align: center; border: none;"><input type="checkbox" id="skipAnimationCheckbox">
                         </td>
                     </tr>
                 </table>
