--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1032,10 +1032,10 @@
                     } else {
                         if (item.cube_owner === 'first') {
                             cubeX = 400 - 25;
-                            cubeY = 150 - 25;
+                            cubeY = 625 - 25;
                         } else {
                             cubeX = 400 - 25;
-                            cubeY = 625 - 25;
+                            cubeY = 150 - 25;
                         }
                     }
                     ctx.drawImage(cubeImg, cubeX, cubeY, 50, 50);
@@ -1069,12 +1069,12 @@
                             cubeY = 400 - 25;
                         }
                     } else {
-                        if (turnItem.cube_owner === 'first') {
+                        if (item.cube_owner === 'first') {
                             cubeX = 400 - 25;
-                            cubeY = 750 - 25;
+                            cubeY = 625 - 25;
                         } else {
                             cubeX = 400 - 25;
-                            cubeY = 50 - 25;
+                            cubeY = 150 - 25;
                         }
                     }
                     ctx.drawImage(cubeImg, cubeX, cubeY, 50, 50);
