--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -565,6 +565,7 @@
                     </div>
                     <button onclick="nextTurn()" id="nextBtn" title="Next Move"></button>
                 </div>
+                <div></div>
             </div>
             <div id="checkboxes">
                 <table style="border: none; border-collapse: collapse; width: 100%;">
