--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -286,7 +286,9 @@
             h1 {
                 font-size: 2rem;
             }
-
+            center-controls{
+                margin-right: 50px;
+            }
             .pips-above-board,
             .pips-below-board {
                 font-size: 16px;
@@ -356,8 +358,8 @@
             #screenshotBtn,
             #screenSaveBtn,
             #screenUploadBtn {
-                width: 60px;
-                height: 60px;
+                width: 50px;
+                height: 50px;
             }
         }
 
@@ -365,7 +367,9 @@
             h1 {
                 font-size: 1.5rem;
             }
-
+            center-controls{
+                margin-right: 35px;
+            }
             canvas {
                 width: 100%;
                 height: 100%;
