--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -157,14 +157,17 @@
         }
 
         #controls {
+            position: relative;
             display: flex;
-            justify-content: space-between;
             align-items: center;
             width: 100%;
             flex-wrap: wrap;
         }
 
         .center-controls {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
             display: flex;
             align-items: center;
             gap: 5px;
@@ -286,9 +289,7 @@
             h1 {
                 font-size: 2rem;
             }
-            center-controls{
-                margin-right: 50px;
-            }
+
             .pips-above-board,
             .pips-below-board {
                 font-size: 16px;
@@ -312,7 +313,6 @@
                 flex-direction: row;
                 align-items: center;
                 gap: 10px;
-                justify-content: space-between;
                 width: 100%;
             }
 
@@ -367,9 +367,7 @@
             h1 {
                 font-size: 1.5rem;
             }
-            center-controls{
-                margin-right: 35px;
-            }
+
             canvas {
                 width: 100%;
                 height: 100%;
@@ -569,7 +567,6 @@
                     </div>
                     <button onclick="nextTurn()" id="nextBtn" title="Next Move"></button>
                 </div>
-                <div></div>
             </div>
             <div id="checkboxes">
                 <table style="border: none; border-collapse: collapse; width: 100%;">
