--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -464,6 +464,7 @@
             text-align: right;
             display: block;
             width: fit-content;
+            top: -30px;
         }
 
         .pips-above-board-inverted {
@@ -476,6 +477,7 @@
             text-align: right;
             display: block;
             width: fit-content;
+            top: -30px;
         }
 
         .pips-below-board-inverted {
