--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -144,16 +144,7 @@
             margin-top: 10px;
             align-items: center;
             width: 100%;
-            position: relative;
-        }
-
-        #gameSelect {
-            margin: 0 auto;
-        }
-
-        .right-group {
-            position: absolute;
-            right: 0;
+            justify-content: space-between;
         }
 
         #controls {
@@ -464,7 +455,6 @@
             text-align: right;
             display: block;
             width: fit-content;
-            top: -30px;
         }
 
         .pips-above-board-inverted {
@@ -477,7 +467,6 @@
             text-align: right;
             display: block;
             width: fit-content;
-            top: -30px;
         }
 
         .pips-below-board-inverted {
