--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -144,7 +144,7 @@
             margin-top: 10px;
             align-items: center;
             width: 100%;
-            justify-content: space-between;
+            position: relative;
         }
 
         #controls {
@@ -434,6 +434,8 @@
         }
 
         .right-group {
+            position: absolute;
+            right: 0;
             display: flex;
             align-items: center;
             gap: 10px;
