--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -144,10 +144,11 @@
             margin-top: 10px;
             align-items: center;
             width: 100%;
+            justify-content: flex-start;
         }
 
         .pips-container {
-            text-align: right;
+            margin-left: auto;
         }
 
         #controls {
@@ -299,7 +300,7 @@
                 flex-direction: row;
                 align-items: center;
                 gap: 10px;
-                justify-content: space-between;
+                justify-content: flex-start;
                 width: 100%;
             }
 
@@ -319,7 +320,7 @@
                 flex-direction: row;
                 align-items: center;
                 gap: 10px;
-                justify-content: space-between;
+                justify-content: flex-start;
                 width: 100%;
             }
 
@@ -574,7 +575,7 @@
                                 id="screenUploadBtn" title="Upload Screenshots"></button></td>
                     </tr>
                     <tr>
-                        <td style="text-align: left; border: none;">Убрать данные матча на скриншоте</td>
+                        <td style="text-align: left; border: none;">Обезличить скриншот</td>
                         <td style="text-align: center; border: none;"><input type="checkbox" id="hideInfoCheckbox"></td>
                     </tr>
                     <tr>
