--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -433,10 +433,6 @@
             align-items: center;
         }
 
-        #hideInfoCheckbox {
-            margin-right: 10px;
-        }
-
 
 
         #players-info {
@@ -575,7 +571,7 @@
                                 id="screenUploadBtn" title="Upload Screenshots"></button></td>
                     </tr>
                     <tr>
-                        <td style="text-align: left; border: none;">Обезличить скриншот</td>
+                        <td style="text-align: left; border: none;">Убрать данные матча на скриншоте</td>
                         <td style="text-align: center; border: none;"><input type="checkbox" id="hideInfoCheckbox"></td>
                     </tr>
                     <tr>
