--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1427,12 +1427,45 @@
                         drawBoard();
                         updateButtons();
                         updateInfo();
+                    } else if (currentGameNum > 1) {
+                        currentGameNum--;
+                        data = availableGames[currentGameNum - 1].turns;
+                        current = data.length - 1;
+                        updateGameSelect();
+                        drawBoard();
+                        updateButtons();
+                        updateInfo();
+                        const game = availableGames[currentGameNum - 1];
+                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>${game.point_match === 0 ? 'Манигейм' : `Матч до ${game.point_match}`}</span><span>Игра ${currentGameNum}</span><span>Счет: ${game.first_score} - ${game.second_score}</span></div>`;
+                        redPlayer = game.first_player;
+                        blackPlayer = game.second_player;
+                        gameRedScore = game.first_score;
+                        gameBlackScore = game.second_score;
+                        playersInfoDiv.innerHTML = `Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
                     }
                 }, 50);
                 return;
             }
 
-            if (current === 0) return;
+            if (current === 0) {
+                if (currentGameNum > 1) {
+                    currentGameNum--;
+                    data = availableGames[currentGameNum - 1].turns;
+                    current = data.length - 1;
+                    updateGameSelect();
+                    drawBoard();
+                    updateButtons();
+                    updateInfo();
+                    const game = availableGames[currentGameNum - 1];
+                    matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>${game.point_match === 0 ? 'Манигейм' : `Матч до ${game.point_match}`}</span><span>Игра ${currentGameNum}</span><span>Счет: ${game.first_score} - ${game.second_score}</span></div>`;
+                    redPlayer = game.first_player;
+                    blackPlayer = game.second_player;
+                    gameRedScore = game.first_score;
+                    gameBlackScore = game.second_score;
+                    playersInfoDiv.innerHTML = `Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
+                }
+                return;
+            }
 
             current--;
             drawBoard();
@@ -1450,7 +1483,7 @@
             const nextBtn = document.getElementById('nextBtn');
 
             if (dataLoaded) {
-                prevBtn.disabled = current === 0;
+                prevBtn.disabled = current === 0 && currentGameNum === 1;
                 nextBtn.disabled = current === data.length - 1 && currentGameNum >= availableGames.length;
             } else {
                 prevBtn.disabled = true;
