--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1026,10 +1026,10 @@
                         }
                     } else {
                         if (item && item.cube_owner === 'first') {
-                            cubeX = 400 - 25;
+                            cubeX = 380 - 25;
                             cubeY = 625 - 25;
                         } else {
-                            cubeX = 400 - 25;
+                            cubeX = 380 - 25;
                             cubeY = 150 - 25;
                         }
                     }
@@ -1065,11 +1065,11 @@
                             cubeY = 400 - 25;
                         }
                     } else {
-                        if (item.cube_owner === 'first') {
-                            cubeX = 400 - 25;
+                        if (item && item.cube_owner === 'first') {
+                            cubeX = 380 - 25;
                             cubeY = 625 - 25;
                         } else {
-                            cubeX = 400 - 25;
+                            cubeX = 380 - 25;
                             cubeY = 150 - 25;
                         }
                     }
