--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1484,7 +1484,7 @@
             } else if (turn && turn.action) {
                 moveInfo.textContent = turn.action;
             } else {
-                moveInfo.textContent = 'Initial Position';
+                moveInfo.textContent = 'Пропуск хода';
             }
         }
 
