--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1560,7 +1560,7 @@
                     x: 0,
                     y: 0,
                     width: document.body.scrollWidth,
-                    height: 800  // Ограничение высоты скриншота до 800 пикселей
+                    height: 600
                 }
             }).then(canvas => {
                 // Restore after screenshot
